Profile/client/styles/Imports/HtmlElements.import.styl
body
  // background-color: rgb(38, 102, 135)
  background-color #1F618D
  // font: 400 1em/1.38 Helvetica
  font-family: medium-content-sans-serif-font, 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
  color: dark

footer
  padding-top 50px
  // padding-bottom 100px

h2
  padding-bottom 10px
  text-decoration underline

@media (max-width: 375px)
  h2.inverse.section-header
    max-width: 280px
    // Center text manually
    display block
    margin-left auto
    margin-right auto

center-content(width_per)
  width width_per
  height auto
  display block
  margin-left auto
  margin-right auto

img.cd
  center-content(50%)

.figure
  center-content(50%)
.small-cd
  width 100%

// video
//   center-content(50%)

// For contact icons
// ul
  // list-style-type none

a.unstyled
  padding-right 10px
  padding-left 10px
  color black
  text-decoration none


// Materialistic Buttons that can be clicked on mobile
p.button
  padding-bottom 10px

a.button
  color light
  // font-weight: bold
  border none
  margin 0px
  padding 10px
  /*Flat Button styles*/
  text-shadow: 0 1px rgba(0, 0, 0, 0.3)
  cursor: pointer
  transition: background 0.2s ease-in-out
  border-radius: 4px
  background-color: #5499C7
  box-shadow: 0px 2px 0px 0px #154360
a.button:hover
  background-color: #154360

